# slomix

./: .claudeignore  .codacy.yaml  .coverage  .dockerignore  .env.example  .env.example.COMPLETE  .env.template  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .release-please-config.json  .secrets.baseline  2026-01-12-224606-te_escape2-round-2-endstats.txt  =2.2.0  ACHIEVEMENT_SYSTEM.md  ADVANCED_TEAM_DETECTION.md  AI_COMPREHENSIVE_SYSTEM_GUIDE.md  AI_PROJECT_STATUS_OCT12.md  AI_PROMPT_NETWORK_MIGRATION_SCRIPT.md  ARCHAEOLOGICAL_CODE_REVIEW.md  ARCHITECTURE_REVIEW_COMPLETE.md  ARCHITECTURE_REVIEW_REFACTORED.md  AUTOMATION_REFACTOR_COMPLETE.md  AUTOMATION_SETUP_GUIDE.md  AUTOMATION_SUMMARY.md  BOT_AUDIT_REPORT_2025-11-26.md  BOT_FIX_7DAY_FILTER.md  BOT_HEALTH_CHECK_REPORT.md  BUGFIXES_OCT11.md  BUGFIX_DATABASE_INSERTION.md  BUGFIX_LOG_OCT11.md  BUGFIX_LOG_OCT12.md  BUGFIX_SESSION_NOV3_2025.md  BUG_FIXES_2025-11-14.md  BULK_IMPORTER_NEEDS_BOT_FIXES.md  CHANGELOG.md  CLEAN_README.md  CODE_OF_CONDUCT.md  (+518 more)
.claude/: init.md  settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
analytics/: __init__.py  config.py  synergy_detector.py
archive/: AI_AGENT_GUIDE.md  AI_AGENT_MASTER_GUIDE.md  ALL_TODOS_COMPLETE.md  ANALYTICS_ROADMAP.md  ARCHIVE_CLARIFICATION.md  AUTOMATION_COMPLETE.md  AUTOMATION_SESSION_SUMMARY.md  AUTOMATION_SYSTEM_DESIGN.md  AVAILABLE_STATS_ANALYSIS.md  BOT_COMPLETE_GUIDE.md  BOT_FIX_EMBEDS.md  BOT_IMPROVEMENTS_SESSION2.md  BUGS_FIXED_20251004.md  BULK_IMPORT_FIX_COMPLETE.md  C0RNP0RN3_ANALYSIS.md  CDPM_VS_OUR_DPM_FINAL_REPORT.md  CHANGELOG.md  COMMAND_REFERENCE.md  COMPLETE_DATA_FLOW_ANALYSIS.md  COMPLETE_FIELD_MAPPING.md  COMPLETE_PROJECT_CONTEXT.md  COMPLETE_STATS_LIST.md  COPILOT_INSTRUCTIONS.md  DATABASE_EXPLAINED.md  DATABASE_MIGRATION_COMPLETE.md  DATABASE_POPULATION_COMPLETE.md  DATABASE_REBUILD_COMPLETE.md  DATABASE_REBUILD_QUICKSTART.md  DATABASE_REBUILD_TROUBLESHOOTING.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_FIXES_OCT6_2025.md  DIAGNOSTICS_REPORT_OCT6.md  DISCORD_TEST_GUIDE.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  DPM_DEBUG_SUMMARY_2025-10-03.md  DPM_DEBUG_VISUAL.md  DPM_DIFFERENCE_INVESTIGATION.md  DPM_FIX_NOTES.md  (+64 more)
asdf/: DPM_INVESTIGATION_RESULTS.md  PROJECT_CONTEXT_COMPLETE.md  TEST_REPORT.md  TODO_IMPLEMENTATION.md  debug_dpm_chain.py  investigate_dpm_inflation.py  test_bot_parse_actual.py  test_bot_parser.py  test_bot_startup.py  test_c0rnp0rn3_format.py  test_clean_project.py  test_cumulative_hypothesis.py  test_database.py  test_db_structure.py  test_dmp_values.py  test_enhanced_parser.py  test_final_validation.py  test_multiple_sessions.py  test_parser_format.py  test_sessions.py
backups/: corrupted_migrate_database_oct7.py.bak
bot/: BOT_CRITICAL_FIXES.py  CLAUDE.md  README_AUTOMATION.md  automation_architecture.py  automation_enhancements.py  check_db.py  community_stats_parser.py  config.json  config.py  dotenv-example  endstats_parser.py  etlegacy_production.db  fiveeyes_config.json  helper_methods_to_insert.txt  hybrid_processing_helpers.py  image_generator.py  insert_helpers.py  integrate_automation.py  last_session_helpers.py  last_session_redesigned_impl.py  logging_config.py  proximity_parser.py  proximity_parser_v2.py  proximity_parser_v3.py  retro_text_stats.py  retro_viz.py  schema.json  schema.sql  setup_automation.py  test_automation.py  ultimate_bot.cleaned.py  ultimate_bot.py  ultimate_bot.py.backup_GOOD_20251005
bot_backup_20251117_235848/: BOT_CRITICAL_FIXES.py  README_AUTOMATION.md  automation_architecture.py  automation_enhancements.py  check_db.py  config.json  config.py  helper_methods_to_insert.txt  hybrid_processing_helpers.py  image_generator.py  insert_helpers.py  last_session_redesigned_impl.py  logging_config.py  remove_duplicates.py  retro_text_stats.py  retro_viz.py  schema.sql  setup_automation.py  ultimate_bot.cleaned.py  ultimate_bot.py  ultimate_bot.py.backup_GOOD_20251005  ultimate_bot.py.backup_team_scoring_20251005_134308
database/: create_unified_database.py
deployed_lua/: README.md
dev/: # Code Citations.md  # Code Citations1.md  AI_COPILOT_SECONDS_REFERENCE.md  ANSWER_TO_USER.md  BOT_QUERIES_UPDATE_COMPLETE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_PIPELINE_ANALYSIS.md  DPM_FIX_COMPLETE_SUMMARY.md  DPM_TRUTH_REVEALED.md  OCTOBER_2_ANALYSIS.md  PRODUCTION_SETUP.md  PROJECT_COMPREHENSIVE_CONTEXT.md  README.md  READY_TO_START.md  SECONDS_IMPLEMENTATION_COMPLETE.md  SESSION_COMPLETE_OCT3_EVENING.md  SESSION_SUMMARY_SECONDS.md  TIME_FIX_VERIFICATION_REPORT.md  TIME_FORMAT_ANALYSIS.md  analyze_linking.py  auto_link_integration.py  bulk_import_stats.py  c0rnp0rn4.lua  check_implementation_status.py  check_old_links_and_dpm.py  check_raw_line.py  check_raw_zero_files.py  check_which_field_has_time.py  comprehensive_time_analysis.py  consolidate_players.py  create_production_database.py  create_test_data.py  debug_round2_time.py  deep_time_analysis.py  env_complete.sh  import_errors_20251003_053727.json  import_errors_20251003_054053.json  import_errors_20251003_103940.json  import_errors_20251103_032228.json  import_errors_20251103_032243.json  (+26 more)
dev_tools/: add_first_seen_column.py  add_headshots_column.py  add_map_id.py  add_map_id_column.py  add_team_history_tables.py  add_time_tracking_columns.py  analyze_gaming_sessions.py  analyze_goldrush.py  analyze_last_session.py  analyze_nov2_stats.py  analyze_oct28_oct30.py  analyze_validation.py  audit_missing_rounds.py  backfill_accuracy.py  backfill_fixed_fields.py  backfill_gaming_session_id.py  backfill_round_outcomes.py  backfill_session_winners.py  backfill_team_history.py  backfill_time_values.py  check_4way_sync_status.py  check_all_databases.py  check_all_players_headshots.py  check_all_revives.py  check_bot_db_stats.py  check_brewdog_duplicates.py  check_carniee_weapons.py  check_current_schema.py  check_database_health.py  check_db_dates.py  check_db_schema.py  check_differential_bug.py  check_differential_vs_db.py  (+159 more)
(+2608 files in other folders)
