[project]
name = "etlegacy-stats-bot"
version = "1.0.8"
description = "ET:Legacy Discord Stats Bot - Production-grade gaming analytics"
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.pycodestyle]
max-line-length = 120
# E226: whitespace around arithmetic - stylistic
# E231: whitespace after comma - stylistic  
# E127/E128: continuation indent - minor
# W504: line break after binary - preference
# E701: one-line if statements - readable in Python
ignore = ["W503", "E203", "E402", "E226", "E231", "E127", "E128", "W504", "E701"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["W503", "E203", "E402", "E226", "E231", "E127", "E128", "W504", "E701"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "node_modules",
    "archive",
    "backups",
    "test_suite",
    "dev",
    "asdf",
    "prompt_instructions"
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long (handled by ruff/flake8)
    "C0302",  # too-many-lines
    "C0411",  # wrong-import-order (handled by isort/ruff)
    "C0415",  # import-outside-toplevel (intentional: optional deps, deferred imports)
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "W0201",  # attribute-defined-outside-init
    "W0612",  # unused-variable
    "W0613",  # unused-argument
    "W0718",  # broad-exception-caught (intentional: bot stability, imports are idempotent)
    "W1203",  # logging-fstring-interpolation (f-strings in logging are project standard)
    "W1514",  # unspecified-encoding
    "R0801",  # duplicate-code (false positives in similar command handlers)
    "R1705",  # no-else-return (stylistic preference to keep explicit branches)
    "C0325",  # superfluous-parens
    "C0413",  # wrong-import-position (intentional deferred imports)
    "W0107",  # unnecessary-pass
    "W0212",  # protected-access (internal Discord.py patterns require it)
    "W0621",  # redefined-outer-name
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line-too-long (handled separately)
    "E402",   # module-level-import-not-at-top (intentional deferred imports)
    "UP017",  # datetime-timezone-utc (behavioral change — naive vs aware)
    "UP035",  # deprecated-import (needs manual review per-file)
    "SIM105", # suppressible-exception (contextlib.suppress not always clearer)
    "SIM108", # if-else-block-instead-of-if-exp (readability preference)
    "SIM102", # collapsible-if (readability preference)
    "SIM114", # if-with-same-arms (intentional separate branches)
    "B904",   # raise-without-from-inside-except (too noisy for existing code)
    "B008",   # function-call-in-default-argument (FastAPI Query/Depends pattern)
    "B905",   # zip-without-explicit-strict (too verbose for existing code)
    "C416",   # unnecessary-comprehension (readability preference)
    "C408",   # unnecessary-collection-call (stylistic)
    "SIM115", # open-file-with-context-handler (scripts use simple open patterns)
    "B007",   # unused-loop-control-variable (common pattern in Python)
    "SIM103", # needless-bool (intentional explicit branches with comments)
    "SIM113", # enumerate-for-loop (dual counter pattern)
]

[tool.ruff.lint.per-file-ignores]
"bot/endstats_parser.py" = ["T201"]
"website/backend/init_db.py" = ["T201"]
"postgresql_database_manager.py" = ["T201"]
"scripts/*" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["bot", "website", "proximity"]
